# githist-rs

./: Cargo.toml  README.md
src/: git.rs  git_fns.rs  lib.rs  main.rs  ui.rs
src/ui/: run.rs
