[package]
name = "githist"
version = "0.1.0"
authors = ["Josh Skeen <josh@joshskeen.com>"]
license = "MIT OR Apache-2.0"
description = "a tui for switching between branches"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26.1"
git2 = "0.16.1"
clap = "4.1.8"
chrono = "0.4.23"
timeago = "0.4.1"
pad = "0.1.6"