[package]
name = "githist"
version = "0.3.0"
authors = ["Josh Skeen <josh@joshskeen.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/joshskeen/githist-rs"
repository = "https://github.com/joshskeen/githist-rs"
description = "a text user interface for switching between recent branches"
readme = "README.md"
edition = "2021"
keywords = ["tui", "git", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
git2 = "0.18.3"
chrono = "0.4.23"
timeago = "0.4.1"
pad = "0.1.6"
clap = { version = "4.5.60", features = ["derive"] }
